--- a/Portfolio_project_TTA2.html
+++ b/Portfolio_project_TTA2.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width" />
         <title>Michael Pate's Portfolio</title>
-        <link rel="stylesheet" type="text/css" href="CSS\MTP_portfolio.css">
+        <link rel="stylesheet" type="text/css" href="./MTP_portfolio.css">
         <script src="myPortfolio.js" defer></script>
     </head>
 
