--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width" />
         <title>Michael Pate's Portfolio</title>
         <link rel="stylesheet" type="text/css" href="./MTP_portfolio.css">
-        <script src="myPortfolio.js" defer></script>
+        <script src="myportfolio.js" defer></script>
     </head>
 
     <!--Body-->
