--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
             <h1 class="white-text">Michael Pate's Portfolio</h1>
             <strong>
                 <p class="center">
-                    <q>“Digital freedom stops where that of users begins... 
+                    <q>Digital freedom stops where that of users begins... 
                         <br>Nowadays, digital evolution must no longer be offered to a customer in trade-off between privacy and security. 
-                        <br>Privacy is not for sale, it's a valuable asset to protect.”
+                        <br>Privacy is not for sale, it's a valuable asset to protect.
                         
                     </q>
                     <br> ― Stephane Nappo
