--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <div class="Column_1">
                 <h1>About</h1>
                 <p>
-                    I am a Cyber Sercurity professional who has many years of experience in Food Service Operations Management! As a father of three, I enjoy time with my family and friends. 
+                    I am a Cyber Security professional who has many years of experience in Food Service Operations Management! As a father of three, I enjoy time with my family and friends. 
                     <br>
                     <br>I am a graduate of <a href="https://www.learncodinganywhere.com" target="_blank">The Tech Academy</a>’s Cyber Security Boot Camp, and trained and experienced in the following areas: Ethical Hacking, Front End, Git, GitHub, VSC, HTML, CSS, JavaScript, jQuery, Mobile Security, Network Security, Project Management, React.js, and more. 
                     <br>
