--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                 <p class="center">
                     <q>Digital freedom stops where that of users begins... 
                         <br>Nowadays, digital evolution must no longer be offered to a customer in trade-off between privacy and security. 
-                        <br>Privacy is not for sale, it's a valuable asset to protect.                    
-                    </q>
+                        <br>Privacy is not for sale, it's a valuable asset to protect.</q>
+                    <br>
                     <br> ― Stephane Nappo
                     <br>
                     <br> My name is Michael Pate. Welcome to my portfolio website. On it, I will tell you about my background and experience.
