--- a/index.html
+++ b/index.html
@@ -135,6 +135,8 @@
                     <p class="center"><a href="https://github.com/MTPATE" target="_blank">My Github Profile</a></p>
                     <br>
                     <p class="center"><a href="https://www.linkedin.com/in/michael-t-pate-security-professional/" target="_blank">My Linkin Profile</a></p>
+                    <br>
+                    <p class="center"><a href="https://docs.google.com/document/d/19ZISPq1rPM6IECcoaJEaFaatRzIcepAWF11vyoyauRg/edit?usp=sharing" target="_blank">My Resume</a></p>
                 </p>
             </div>
             <!--Right column-->
