--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
                 <p>
                     You can view my coding projects on my GitHub profile here:
                     <br>
-                    <p class="center"><a href="https://github.com/MTPATE" target="_blank">My Github Profile</a></p>
+                    <p class="center"><a href="https://github.com/MTPATE" target="_blank">My GitHub Profile</a></p>
                     <br>
-                    <p class="center"><a href="https://www.linkedin.com/in/michael-t-pate-security-professional/" target="_blank">My Linkin Profile</a></p>
+                    <p class="center"><a href="https://www.linkedin.com/in/michael-t-pate-security-professional/" target="_blank">My Linkedin Profile</a></p>
                     <br>
                     <p class="center"><a href="https://docs.google.com/document/d/19ZISPq1rPM6IECcoaJEaFaatRzIcepAWF11vyoyauRg/edit?usp=sharing" target="_blank">My Resume</a></p>
                 </p>
