--- a/index.html
+++ b/index.html
@@ -137,6 +137,8 @@
                     <p class="center"><a href="https://www.linkedin.com/in/michael-t-pate-security-professional/" target="_blank">My Linkedin Profile</a></p>
                     <br>
                     <p class="center"><a href="https://docs.google.com/document/d/19ZISPq1rPM6IECcoaJEaFaatRzIcepAWF11vyoyauRg/edit?usp=sharing" target="_blank">My Resume</a></p>
+                    <br>
+                    <p class="center"><a href="https://www.credly.com/badges/28e798b0-e70e-44a6-8bfb-c701bb765432/public_url" target="_blank">Cyber Threat Management Issued by Cisco</a></p>
                 </p>
             </div>
             <!--Right column-->
